# talk_spark_langgraph

./: .env.example  README.md  pyproject.toml  requirements.txt  results.md  results_generation_only.md  sql_app.db  sqlite.db
app/: main.py  server.py
app/db/: database.py
app/db/access_layer/: linkedin_bio.py
app/db/controllers/: bio.py  linkedin_bio.py
app/graph/: consts.py  graph.py  state.py
app/graph/chains/: generation.py
app/graph/chains/tests/: test_chains.py
app/graph/nodes/: __init__.py  generate.py  web_search.py
app/graph/utils/: scrape_linkedin_profile.py  scrape_profile.py
app/middleware/: time_middleware.py
app/models/: models.py
app/schemas/: schema.py
scripts/: response.json  seed_db.py
