[project]
name = "talk-spark-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "dataclasses>=0.8",
    "fastapi>=0.115.6",
    "httpx==0.23.0",
    "langchain-community>=0.3.9",
    "langchain-openai>=0.2.11",
    "langgraph>=0.2.35",
    "langserve>=0.3.0",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
    "sse-starlette>=2.1.3",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.32.1",
]
